# srv6-automation

./: README.md  pyproject.toml  requirements.txt  setup.py
srv6_automation/: cli.py  core.py  srv6_utils.py  test_srv6_utils.py
srv6_automation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
